k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-tier-app
  labels:
    name: multi-tier-app
    purpose: nagp-assignment
